--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "faker": "^4.1.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1"
   }
 }
